--- a/haskell-test-assignment.cabal
+++ b/haskell-test-assignment.cabal
@@ -33,6 +33,7 @@ library
   build-depends:
       HUnit
     , base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
 
 executable haskell-test-assignment-exe
@@ -46,6 +47,7 @@ executable haskell-test-assignment-exe
       HUnit
     , base >=4.7 && <5
     , haskell-test-assignment
+    , hspec
   default-language: Haskell2010
 
 test-suite haskell-test-assignment-test
@@ -60,4 +62,5 @@ test-suite haskell-test-assignment-test
       HUnit
     , base >=4.7 && <5
     , haskell-test-assignment
+    , hspec
   default-language: Haskell2010
