--- a/haskell-test-assignment.cabal
+++ b/haskell-test-assignment.cabal
@@ -31,8 +31,7 @@ library
   hs-source-dirs:
       src
   build-depends:
-      HUnit
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , hspec
   default-language: Haskell2010
 
@@ -44,8 +43,7 @@ executable haskell-test-assignment-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HUnit
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , haskell-test-assignment
     , hspec
   default-language: Haskell2010
@@ -59,8 +57,7 @@ test-suite haskell-test-assignment-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HUnit
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , haskell-test-assignment
     , hspec
   default-language: Haskell2010
